plugins {
	id 'java-library'
	id 'com.github.johnrengelman.shadow' version "6.1.0"
}

repositories {
	mavenCentral()
	
	maven {
		url 'https://m2.dv8tion.net/releases'
	}
	maven {
		url "https://libraries.minecraft.net"
	}
	maven {
		url "https://repo.spongepowered.org/maven/"
	}
	maven {
		url "https://files.minecraftforge.net/maven/"
	}
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
	implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
	implementation group: 'javax.activation', name: 'javax.activation-api', version: '1.2.0'
	implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
	implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
	implementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.13'
	implementation group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
	implementation ('net.dv8tion:JDA:4.2.0_250') {
		exclude module: 'opus-java'
	}
	implementation 'com.mojang:brigadier:1.0.17'

	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
	
	//mixin requirements:
	implementation 'cpw.mods:modlauncher:8.0.9'
	implementation 'cpw.mods:grossjava9hacks:1.1.+'
	implementation 'org.spongepowered:mixin:0.8.3-SNAPSHOT'
	implementation 'com.google.guava:guava:21.0'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
	implementation group: 'org.ow2.asm', name: 'asm', version: '7.2'
	implementation group: 'org.ow2.asm', name: 'asm-util', version: '7.2'
}


shadowJar {
	mergeServiceFiles()
}

jar {
	int i = 0;
	String classpathVar = configurations.compileClasspath.collect { " libs/" + (i++==0?String.format("%0\$-50s", it.getName()):String.format("%0\$-62s", it.getName()))   }.join(" ");
	manifest {
		attributes(
			'Class-Path': classpathVar,
			'MixinConfigs': 'mixins.json',
			'Main-Class': 'cpw.mods.modlauncher.Launcher',
			'Specification-Version': 8.0
		)
	}
	from {
		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	} {
		exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
	}
}
